Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -25,14 +25,11 @@ html {
 
     h1, h2 {
         font-size: 50px;
-        font-weight: 400;
     }
 
 
-
-
     .headShot{
-        padding: 150px 20px 20px 20px;
+        padding: 140px 20px 20px 30px;
     }
 
     .links{
@@ -41,14 +38,13 @@ html {
     }
 
     .btn{
-        font-size: 150px;
+        font-size: 90px;
     }
     .medias{
         text-align: center;
+
     }
-    .second{
-        padding: 0 120px 0 120px;
-    }
+
 
 
     footer{
@@ -58,6 +54,14 @@ html {
         overflow: hidden;
         text-align: center;
         font-size: 30px;
+
+    }
+
+    .about{
+        text-align: center;
+        font-size: 60px;
+        padding: 30px;
+        line-height: 1;
 
     }
 }
